<resources>
    <string name="app_name">UnoManager</string>
    <string name="picture_description">Picture of Sofi (6 years old)</string>
    <string name="add_player">Додай гравця!</string>
    <string name="add_player_question">Введіть ім\'я гравця</string>
    <string name="player_name">Ім\'я</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="group_name_1">ГРАВЕЦЬ 1</string>
    <string name="group_name_2">ГРАВЕЦЬ 2</string>
    <string name="group_name_3">ГРАВЕЦЬ 3</string>
    <string name="group_name_4">ГРАВЕЦЬ 4</string>
    <string name="group_name_5">ГРАВЕЦЬ 5</string>
    <string name="group_name_6">ГРАВЕЦЬ 6</string>
    <string name="group_name_7">ГРАВЕЦЬ 7</string>
    <string name="group_name_8">ГРАВЕЦЬ 8</string>
    <string name="group_name_9">ГРАВЕЦЬ 9</string>
    <string name="group_name_10">ГРАВЕЦЬ 10</string>
    <string name="button_clear">Очистити</string>
    <string name="button_rule">Правила</string>
    <string name="button_close">Закрити</string>
    <string name="button_stat">Статистика</string>
    <string name="column_name">Імʼя</string>
    <string name="column_score">Бали</string>
    <string name="column_date">Дата</string>
    <string name="games_title">
        <big>
            <b>\n Каталог ігор UnoManager</b>
        </big>
    </string>
    <string name="games_stat">
        <big>
            <b>\n Статистика ігор UnoManager</b>
        </big>
    </string>
    <string name="button_uno_title">Уно</string>
    <string name="button_bridge_title">Бридж</string>
    <string name="button_back_title">Назад</string>
    <string name="title_uno">Правила гри УНО / UNO</string>
    <string name="title_bridge">Правила гри Бридж></string>
    <string name="bridge_rule">
        \n\n
        <big>
            <b>"Правила гри Бридж"</b>
        </big>

    </string>
    <string name="uno_rule">
        \n\n
        <big>
            <b>"Загальна інформація\n\n"</b>
        </big>

        <b>"Тип гри:"</b>
        "на уважність.\n"
        <b>"Кількість гравців:"</b>
        "мінімум — 2, максимум — 10.\n"
        <b>"Вік учасників:"</b>
        "від 7 років.\n"
        <b>"Тривалість:</b>
        "приблизно півгодини.\n"
        <b>"Мета:</b>
        "швидше за інших позбутися карт. Після першого туру підраховуються бали, і починається новий раунд: другий,
        третій, четвертий…\n"
        <b>"Поразка:</b>
        "програє той, у кого в скарбничці накопичується 200 балів.\n\n"

        <big>
            <b>"Головні правила\n\n"</b>
        </big>

        "Початок "УНО" завжди однаковий: хтось із учасників активно перемішує карти, після чого роздає їх компаньйонам з
        настільної гри. В результаті цієї нескладної маніпуляції кожен отримує 7 карт (ні більше ні менше). Але ось що
        це за карти, наразі ніхто не знає.\n"
        \n\n
        "Останню карту перевертають і викладають на стіл. Важлива вимога — на ній має зображуватися лише цифра. Якщо
        перед нами опиняється картка з малюнком або карта чорного кольору, її потрібно повернути до колоди. Повторюйте
        це до тих пір, доки нарешті не з'явиться довгоочікувана цифра (яка саме, немає значення).\n"
        "Іноді початок гри затягується, але нічого не поробиш — правила є правила.\n"
        "Підготовчий ритуал завершено, починаємо грати — викидати на стіл картки. Робити це потрібно по черзі, зазвичай
        за годинниковою стрілкою і керуючись правилами. Першим ходить той, кому пощастило сидіти по ліву руку від того,
        хто роздає карти. До речі, право роздавати карти також передається за годинниковою стрілкою. Інших варіантів не
        передбачено.\n"
        \n\n
        "Що ми розуміємо під" <b>"ходом"</b>"? Це викладання своєї картки на ту карту, котра знаходиться на столі. Але
        це зовсім не хаотичне викидання, а чіткі маніпуляції із дотриманням деяких"
        <u>"рекомендацій від творців UNO:\n"</u>

        <b>
            <i>
                <li>"Kартки на 100% збігаються за кольором або мають ідентичний малюнок/цифру;\n"</li>
            </i>
        </b>
        <b>
            <i>
                <li>"Є карти універсального застосування: «Зміна кольору», «Зміна кольору плюс чотири» (їх важно не
                    помітити, тому що вони чорні);\n"
                </li>
            </i>
        </b>
        <b>
            <i>
                <li>"Коли потрібної карти немає, гравець тягнеться до підготовленої раніше колоди і бере звідти наосліп
                    верхню карту (це можна робити лише раз, якщо не пощастило, скажіть «Пас», передавши хід іншому).\n"
                </li>
            </i>
        </b>
        \n\n
        "Тур закінчується відразу, як тільки хтось із присутніх скидає останню карту. Решта підраховують і записують
        бали, враховуючи"
        <u>"вартість карт:\n"</u>

        <b>
            <i>
                <li>"Карти цифрового типу рахуються за вказаним номіналом.\n"</li>
            </i>
        </b>
        <b>
            <i>
                <li>"Кожна чорна картка додає 50 балів.\n"</li>
            </i>
        </b>
        <b>
            <i>
                <li>"Карти із зображеннями — 20 балів.\n"</li>
            </i>
        </b>
        \n\n
        "Rules source: https://desktopgames.com.ua/ua/uno.html?tab=rules"
    </string>
    <string name="action_settings">Settings</string>
</resources>
