<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="0dp"
              android:layout_marginTop="0dp"
              android:scaleType="fitCenter">
    <TextView
            android:text="@string/add_player_question"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="center"
            android:background="#CDDC39"
            android:contentDescription="@string/app_name"
            android:textSize="20sp" android:textStyle="bold" android:paddingTop="15dp" android:paddingLeft="5dp"/>
    <EditText
            android:id="@+id/playername"
            android:inputType="textShortMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/player_name"
            android:textSize="20sp"
            android:autofillHints="name"
            tools:ignore="TextContrastCheck"/>
</LinearLayout>