<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".Statistic">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:srcCompat="@drawable/picture"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/picture_description"
    />

    <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/games_stat"/>

    <ScrollView
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_weight="1" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="70dp">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:isScrollContainer="true">
            <TableLayout
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="1"
                    android:id="@+id/winner_table"
                    app:layout_constraintTop_toTopOf="parent">

                <TableRow android:visibility="visible"
                          android:background="@drawable/border"
                          android:id="@+id/column_name">
                    <TextView
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_height="match_parent"
                            android:layout_width="150dp"
                            android:layout_weight=".33"
                            android:id="@+id/name"
                            android:text="@string/column_name"
                            android:textAlignment="center"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"
                            android:textStyle="bold"
                            android:textSize="20sp"/>
                    <TextView
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_height="match_parent"
                            android:layout_width="50dp"
                            android:layout_weight=".33"
                            android:id="@+id/score"
                            android:textAlignment="center"
                            android:text="@string/column_score"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"
                            android:textStyle="bold"
                            android:textSize="20sp"/>
                    <TextView
                            android:gravity="center"
                            android:layout_height="match_parent"
                            android:layout_width="100dp"
                            android:layout_weight=".33"
                            android:id="@+id/date"
                            android:textAlignment="center"
                            android:text="@string/column_date"
                            android:textStyle="bold"
                            android:textSize="20sp"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintWidth_percent="0.3"
            android:text="@string/button_back_title"
            android:background="#DCDCDC"
            style="@style/Widget.AppCompat.Button"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

    </Button>
    <Button
            android:id="@+id/button_clear_stat"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintWidth_percent="0.25"
            android:text="@string/button_clear"
            android:background="#DCDCDC"
            style="@style/Widget.AppCompat.Button"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>